# libsockets

./: .gitignore  CMakeLists.txt  Makefile  Makefile.new  README.md  client.c  ipv6.c  main.c  proxy.c  raw.c  rawclient.c  server.c  sockets.c  sockets.h  structs.c  structs.h  utils.h
include/: app.h  server.h  sockets.h  structs.h  utils.h
src/: client.c  compat.c  compat.h  sample.c  server.c  sockets.c  structs.c
